# VoxelGrid2VoxelCubes

./: CMakeLists.txt  LICENSE  README.md
Tool3mf/: CMakeLists.txt  Tool3mf.cpp
Tool3mf/Tool3mf/: Tool3mf.h  Tool3mf.hpp
Utils/: parser.hpp  thread_pool.hpp  tools.hpp
app/: Binary2Cubes.cpp  CMakeLists.txt  InvertTSDFCubes.cpp  LabelTSDF2Cubes.cpp  Occupancy2Cubes.cpp
cmake/: lib3mf.CMakeLists.txt.in
